<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myInitialLayoutMainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/myLinearlayoutMainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="30sp"
            android:text="@string/lblSearchMainActivity"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtBoxSearchMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="30sp"
            android:ems="10"
            android:hint="@string/hintExample"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSearch"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="15sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="20sp"
            android:text="@string/search" />

        <fragment
            android:id="@+id/fragment"
            android:name="fr.zhum.lp3tp23.View.MovieFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>