<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgMovie"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_weight="1"
                android:padding="20dp"
                app:srcCompat="@mipmap/ic_launcher_round" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_weight="1"
                android:minWidth="200dp"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblTitleDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="30sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_weight="1"
                android:minWidth="200dp"
                android:text="@string/year"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblYearDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="30sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_weight="1"
                android:minWidth="250dp"
                android:text="@string/gender"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblGenderDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="30sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_weight="1"
                android:minWidth="250dp"
                android:text="@string/runtime"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblRuntimeDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="30sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_weight="1"
                android:minWidth="350dp"
                android:text="@string/directorName"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblDirectorDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="30sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLienDetails"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_weight="1"
                android:backgroundTintMode="multiply"
                android:text="@string/btnConsult"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>